Test/git-issues/git-issue-852.dfy.expect
git-issue-852.dfy(11,10): Error: a newtype declaration (T) in a refinement module can only replace an opaque type declaration
1 resolution/type errors detected in git-issue-852.dfy
